# nbody

./: README.md
figures/: amdahl_bf.tex  computeTimesNormalizedBF10e6.csv  computeTimesNormalizedBF10e6.csv~  computeTimesNormalizedBF10e6.tex  computeTimesNormalizedBF10e6.tex~  flowchart_bf.tex  speedup_bf.tex  speedup_bf.tex~  speedup_qt.tex  speedup_qt_nw.tex  speedup_qt_nw.tex~  timing_bf.tex  timing_qt.tex  timing_qt.tex~  timing_two_masses_zoom.tex  timing_two_masses_zoom.tex~  timing_two_masses_zoom_4500_6000.csv  timing_two_masses_zoom_4500_6000~  timing_two_nodes.tex  timing_two_nodes_for_plot.csv  timing_two_nodes_for_plot.csv~
handin/: README.txt
input/: test_case.txt
presentation/: conclusion.tex  implementation.tex  introduction.tex  presentation.tex  results.tex
report/: #report.tex#  conclusion.tex  description.tex  description.tex~  report.tex  report.tex~  results.tex  results.tex~  strategy.tex  strategy.tex~
results/: #qt-1000000_timing_nodes_1.csv#  #qt-1000000_timing_nodes_2.csv#  #qt-1000000_timing_nodes_20.csv#  #qt-1000000_timing_nodes_28.csv#  .#qt-1000000_timing_nodes_28.csv  1000000_summary.csv  100000_summary.csv  100000_summary.csv~  bf-1000000_timing_nodes_1.csv  bf-1000000_timing_nodes_1.csv_rank_0.csv  bf-1000000_timing_nodes_12.csv_rank_0.csv  bf-1000000_timing_nodes_12.csv_rank_1.csv  bf-1000000_timing_nodes_12.csv_rank_10.csv  bf-1000000_timing_nodes_12.csv_rank_11.csv  bf-1000000_timing_nodes_12.csv_rank_2.csv  bf-1000000_timing_nodes_12.csv_rank_3.csv  bf-1000000_timing_nodes_12.csv_rank_4.csv  bf-1000000_timing_nodes_12.csv_rank_5.csv  bf-1000000_timing_nodes_12.csv_rank_6.csv  bf-1000000_timing_nodes_12.csv_rank_7.csv  bf-1000000_timing_nodes_12.csv_rank_8.csv  bf-1000000_timing_nodes_12.csv_rank_9.csv  bf-1000000_timing_nodes_16.csv  (+326 more)
src/: CMakeLists.txt  Quadtree.cpp  Quadtree.cpp~  Quadtree.hpp  Quadtree.hpp~  Quadtree.h~  brutforce-parallel  brutforce-serial  brutforce_parallel.cpp  brutforce_parallel.cpp~  brutforce_serial.cpp  brutforce_serial.cpp~  brutforce_serial.hpp~  generate_data.m  generate_simple_daata.m  measure_loading_comm.cpp  plot_collision_times.m  plot_results.m  process_results_rank.m  quadtree-serial  quadtree_parallel.cpp  quadtree_serial.cpp  quadtree_serial.cpp~
(+25 files in other folders)
